@@ -236,6 +236,26 @@ void logTrust( int inPlayerID, char *inPlayerEmail,
 
 
 
+void logDistrust( int inPlayerID, char *inPlayerEmail,
+                  char *inTargetPlayerEmail ) {
+    
+    if( logFile != NULL ) {
+        stepLog();
+
+        if( logFile != NULL ) {
+
+            fprintf( logFile, "D %.0f %d %s => %s\n",
+                     Time::timeSec(),
+                     inPlayerID, inPlayerEmail, 
+                     inTargetPlayerEmail );
+            
+            fflush( logFile );
+            }
+        }
+    }
+
+
+
 void logCurseScore( char *inPlayerEmail,
                     int inCurseScore ) {
     
